--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "ownerNumber": ["0@s.whatsapp.net","0@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
-    "botName": "Haruka-Mdོ ",
+    "ownerNumber": ["6285922480867@s.whatsapp.net","0@s.whatsapp.net"],
+    "ownerName": "Kii",
+    "instagram" : "https://instagram.com/seiraxx_ki",
+    "botName": "ChruzzXd ",
     "footer": "WhatsApp Bot",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
